# agent-episodic-memory

./: .env.example  .gitignore  README.md  agent.py  dataset-visualizer.ipynb  docker-compose.yml  embed_text_descriptions.sbatch  embed_videos.py  embed_videos.sbatch  example_images.json  generate_descriptions.sbatch  process_sliding_window_pipeline.sbatch  pyproject.toml  rag_test_33433_2.out  requirements.txt  run_local_agent.sbatch  run_processing_pipeline.sbatch  run_rag_array.sbatch  test_setup.json
Agent/: RAG_server.py  RAG_server_v3.py  agent.py  agent_local.py  agent_multimodal.py  model_client.py  rag_configs.json
Agent/Results/: human_trial.jsonl  no_rag.jsonl  v1.jsonl  v2.jsonl  v3.jsonl  v4.jsonl  video_only.jsonl
Agent/utils/: __init__.py  constants.py  local_model.py  openai_model.py
Database/: .dockerignore  Dockerfile  browse_collection.ipynb  client.py  milvus_client.py  milvus_seed.py  recall_testing.py  seed.py  seed_collections.py  seed_v3_collection.py
DatasetProcessing/: dataset-visualizer.ipynb  embed_text_descriptions.py  embed_videos.py  export_chunked_to_csv.py  export_to_csv.py  generate_descriptions.py  import_from_csv.py  process_dataset.py  process_sliding_window_pipeline.py  run_pipeline.py  sliding_window_processor.py
DatasetProcessing/pipeline/: __init__.py  step1_sliding_window.py  step2_video_embedding.py  step3_generate_descriptions.py  step4_text_embedding.py  step5_generate_actions.py  step6_export_csv.py
EnvServer/: Dockerfile  Dockerfile.multi  env_server.py  multi_env_server.py  requirements.txt
ModelServer/: Dockerfile  __init__.py  model_manager.py  models.py  requirements.txt  server.py
Scripts/: run_multimodal_agent.sbatch
(+3 files in other folders)
