[project]
name = "agent-episodic-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "distro==1.9.0",
    "einops>=0.8.1",
    "exceptiongroup==1.3.1",
    "fonttools==4.61.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "kiwisolver==1.4.9",
    "langchain==1.1.1",
    "langchain-core==1.1.0",
    "langchain-openai==1.1.0",
    "langgraph==1.0.4",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.2.12",
    "langsmith==0.4.53",
    "matplotlib==3.10.7",
    "numpy==2.2.6",
    "openai==2.8.1",
    "opencv-python>=4.12.0.88",
    "orjson==3.11.4",
    "ormsgpack==1.12.0",
    "packaging==25.0",
    "pillow==12.0.0",
    "pip",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "torch>=2.9.1",
    "tqdm==4.67.1",
    "transformers>=4.57.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "uuid-utils==0.12.0",
    "x-transformers==0.27.1",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]
